# leafage-evm

./: .gitignore  API.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README_cn.md  SECURITY.md
crates/leafage-evm-chains/: Cargo.toml
crates/leafage-evm-chains/src/: lib.rs
crates/leafage-evm-chains/src/arbitrum/: arbos_state.rs  config.rs  context.rs  evm.rs  mod.rs  poster_gas.rs  stylus_prefix.rs  tx.rs
crates/leafage-evm-chains/src/arbitrum/evm/: context.rs  handler.rs  instructions.rs  mod.rs  poster_gas.rs  stylus.rs
crates/leafage-evm-chains/src/arbitrum/hardforks/: arbitrum.rs  mod.rs
crates/leafage-evm-chains/src/arbitrum/precompile/: abi.rs  address_table.rs  aggregator.rs  arb_bls.rs  arb_info.rs  arb_sys.rs  arbos_acts.rs  arbos_test.rs  chain_config.rs  debug.rs  env.rs  filtered_transactions.rs  function_table.rs  gas_info.rs  mod.rs  native_token_manager.rs  owner.rs  owner_public.rs  registry.rs  retryable_tx.rs  statistics.rs  stylus_dictionary.rs  stylus_runtime.rs  util.rs  wasm.rs  wasm_cache.rs
crates/leafage-evm-chains/src/base/: b20.rs  hardforks.rs  mod.rs  precompile.rs
crates/leafage-evm-chains/src/bsc/: blacklist.rs  handler.rs  mod.rs  transaction.rs
crates/leafage-evm-chains/src/bsc/api/: exec.rs  mod.rs
crates/leafage-evm-chains/src/bsc/hardforks/: bsc.rs  mod.rs
crates/leafage-evm-chains/src/bsc/precompile/: bls.rs  cometbft.rs  double_sign.rs  error.rs  iavl.rs  mod.rs  tendermint.rs  tm_secp256k1.rs
crates/leafage-evm-chains/src/citrea/: config.rs  handler.rs  hardforks.rs  l1_fee.rs  mod.rs
crates/leafage-evm-chains/src/citrea/api/: exec.rs  mod.rs
crates/leafage-evm-chains/src/citrea/precompile/: mod.rs  schnorr.rs
crates/leafage-evm-chains/src/cosmos/: config.rs  handler.rs  hardforks.rs  mod.rs
crates/leafage-evm-chains/src/cosmos/api/: exec.rs  mod.rs
crates/leafage-evm-chains/src/cosmos/precompile/: bech32.rs  erc20.rs  mod.rs  p256.rs
crates/leafage-evm-chains/src/hemi/: handler.rs  hardforks.rs  mod.rs
crates/leafage-evm-chains/src/hemi/api/: exec.rs  mod.rs
crates/leafage-evm-chains/src/hemi/precompile/: mod.rs
crates/leafage-evm-chains/src/iotex/: handler.rs  hardforks.rs  mod.rs  precompile.rs
crates/leafage-evm-chains/src/iotex/api/: exec.rs  mod.rs
crates/leafage-evm-chains/src/mantle/: constants.rs  hardforks.rs  mod.rs
crates/leafage-evm-chains/src/moonbeam/: handler.rs  hardforks.rs  mod.rs  precompile.rs
crates/leafage-evm-chains/src/moonbeam/api/: exec.rs  mod.rs
crates/leafage-evm-chains/src/polygon/: gas.rs  handler.rs  hardforks.rs  instructions.rs  mod.rs
crates/leafage-evm-chains/src/polygon/api/: exec.rs  mod.rs
crates/leafage-evm-chains/src/polygon/precompile/: mod.rs  pip88.rs
crates/leafage-evm-chains/src/tempo/: address.rs  block.rs  fee_payer.rs  gas_params.rs  hardfork.rs  mod.rs  tx.rs
crates/leafage-evm-chains/src/tempo/api/: exec.rs  mod.rs
crates/leafage-evm-chains/src/tempo/precompile/: account_keychain.rs  address_registry.rs  error.rs  fee_manager.rs  mod.rs  nonce.rs  signature_verifier.rs  stablecoin_dex.rs  storage.rs  storage_types.rs  tip20.rs  tip20_factory.rs  tip403_registry.rs  validator_config.rs  validator_config_v2.rs
crates/leafage-evm-precompile/: Cargo.toml
crates/leafage-evm-precompile/src/: lib.rs
crates/leafage-evm-precompile/src/cosmos/: p256.rs
crates/leafage-evm-rpc/: Cargo.toml
crates/leafage-evm-rpc/src/: error.rs  lib.rs  metrics.rs
crates/leafage-evm-rpc/src/api/: debank.rs  eth.rs  leafage.rs  mod.rs  pre.rs  trace.rs
crates/leafage-evm-rpc/src/api_impl/: api_impl.rs  build.rs  core.rs  debank.rs  eth.rs  interceptor.rs  mod.rs  pre.rs  replay.rs  token_collector.rs  trace.rs  utils.rs  warmup.rs
crates/leafage-evm-rpc/src/api_impl/arbitrum/: api.rs  evm.rs  mod.rs  node_interface.rs
crates/leafage-evm-rpc/src/api_impl/base/: api.rs  evm.rs  mod.rs  precompiles.rs
crates/leafage-evm-rpc/src/api_impl/bsc/: api.rs
crates/leafage-evm-rpc/src/api_impl/citrea/: api.rs  evm.rs  mod.rs
crates/leafage-evm-rpc/src/api_impl/cosmos/: api.rs
crates/leafage-evm-rpc/src/api_impl/hemi/: api.rs  evm.rs
crates/leafage-evm-rpc/src/api_impl/iotex/: api.rs
crates/leafage-evm-rpc/src/api_impl/mainnet/: api.rs  evm.rs  mod.rs
crates/leafage-evm-rpc/src/api_impl/mantle/: api.rs  evm.rs  mod.rs
crates/leafage-evm-rpc/src/api_impl/moonbeam/: api.rs
crates/leafage-evm-rpc/src/api_impl/op/: api.rs  evm.rs
crates/leafage-evm-rpc/src/api_impl/polygon/: api.rs
crates/leafage-evm-rpc/src/api_impl/tempo/: api.rs
crates/leafage-evm-rpc/src/implementation/: build.rs  eth.rs  mod.rs  utils.rs
crates/leafage-evm-rpc/tests/: e2e_smoke.rs
crates/leafage-evm-storage/: Cargo.toml
crates/leafage-evm-storage/benches/: layer_read.rs  state_tree_scenarios.rs
crates/leafage-evm-storage/examples/: dump_archive.rs
crates/leafage-evm-storage/src/: archive_tree.rs  db.rs  interface.rs  lib.rs  metrics.rs  migrate.rs  offset.rs  scheme.rs
crates/leafage-evm-storage/src/db_impl/: archive_encoding.rs  error.rs  mod.rs
crates/leafage-evm-storage/src/db_impl/archive_rocksdb_db_impl/: db.rs  mod.rs
crates/leafage-evm-storage/src/db_impl/mdbx_impl/: mod.rs
crates/leafage-evm-storage/src/db_impl/rocksdb_impl/: db.rs  mod.rs
crates/leafage-evm-storage/src/implementation/: mod.rs  scheme.rs
crates/leafage-evm-storage/src/linked_diff/: layer.rs  mod.rs  tree.rs
crates/leafage-evm-storage/src/migrate/: db_migrate.rs  file_migrate.rs  mod.rs
crates/leafage-evm-storage/src/snapshot/: error.rs  layer.rs  mod.rs  tree.rs
crates/leafage-evm-storage/src/state_tree/: error.rs  layer.rs  mod.rs  tree.rs
crates/leafage-evm-storage/tests/: blast_backend.rs
crates/leafage-evm-types/: Cargo.toml
crates/leafage-evm-types/src/: blast.rs  kafka.rs  lib.rs  metrics.rs  primitives.rs  storage.rs
crates/leafage-evm-types/src/rpc/: block_id.rs  call.rs  debank.rs  key.rs  mod.rs  multi_call.rs  pre.rs  rpc_bytes.rs
crates/leafage-evm-types/testdata/: blast_state_diff.rlp.hex
doc/: design.md  leafage_blockDiff.md  usage.md  (+1 more)
(+47 files in other folders)
