[workspace]
members = ["bin/leafage-bench","bin/leafage-evm", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.79"
authors = ["leafage-evm Contributors"]
license = "MIT OR Apache-2.0"
exclude = ["benches/", "tests/"]


[workspace.dependencies]
leafage-evm-storage = { path = "crates/leafage-evm-storage" }
leafage-evm-types = { path = "crates/leafage-evm-types" }
leafage-evm-rpc = { path = "crates/leafage-evm-rpc" }
leafage-evm-chains = { path = "crates/leafage-evm-chains" }
auto_impl = "1.3"
bytes = "1.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rocksdb = { version = "0.24", features = ["jemalloc"] }
jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7"
clap = { version = "4.3", features = ["derive", "env"] }
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = "0.6"
tikv-jemalloc-sys = { version = "0.6", features = [
    "stats",
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
jemalloc_pprof = "0.8"
tower = { version = "0.4.13", features = ["full"] }
quick_cache = "0.4.0"
once_cell = "1.19.0"
futures = "0.3.30"
hyper = "1.6"
rdkafka = "0.36.2"
aws-config = { version = "1.5.9", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.59.0"
flate2 = "1.0.34"
etcd-client = "0.14"
md-5 = "0.10.6"
http-body-util = "0.1"
http = "1.3"
http-body = "1"
procfs = "0.17"
lru = "0.16.0"

# revm
revm = { version = "33.1.0", features = [
    "std",
    "secp256k1",
    "blst",
    "serde",
    "optional_eip3607",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_block_gas_limit",
] }
op-revm = { version = "14.1.0", features = [
    "std",
    "secp256k1",
    "blst",
    "serde",
    "optional_eip3607",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_block_gas_limit",
] }
revm-inspectors = "0.33.2"
revm-bytecode = "7.1.1"

# alloy
alloy-chains = "0.2.5"
alloy = { version = "1.1.3", features = ["full"] }
alloy-rlp = "0.3"
alloy-rlp-derive = "0.3"
alloy-hardforks = "0.4"
alloy-evm = "0.25.2"
alloy-sol-types = "1.3"
alloy-contract = "1.1.3"

# op
op-alloy-rpc-types = "0.23.1"
op-alloy-consensus = "0.23.1"

# metrics
metrics = "0.24.0"
metrics-derive = "0.1"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }

axum = "0.7.9"

bls_on_arkworks = "0.3.0"
prost = "0.12.6"
parity-bytes = "0.1.2"
secp256k1 = "0.30"
p256 = "0.13"
num-bigint = "0.4"
elliptic-curve = "0.13"
sha2 = "0.10"
bech32 = "0.11"

pprof = { version = "0.11", features = ["flamegraph"] }

libmdbx = { git = "https://github.com/Chaintable/libmdbx-rs.git", tag = "1.0.0" }
page_size = "0.6.0"
dashmap = "6.1"

[profile.release]
opt-level = 3
debug = true
