[workspace]
members = ["bin/leafage-bench","bin/leafage-evm", "crates/*"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.91"
authors = ["leafage-evm Contributors"]
license = "MIT OR Apache-2.0"
exclude = ["benches/", "tests/"]


[workspace.dependencies]
leafage-evm-storage = { path = "crates/leafage-evm-storage" }
leafage-evm-types = { path = "crates/leafage-evm-types" }
leafage-evm-rpc = { path = "crates/leafage-evm-rpc" }
leafage-evm-chains = { path = "crates/leafage-evm-chains" }
auto_impl = "1.3"
bytes = "1.5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rocksdb = { git = "https://github.com/rust-rocksdb/rust-rocksdb", rev = "a4f178d0ca668c4b48d993ab8aef6f4004780f23", features = ["jemalloc"] }
jsonrpsee = { version = "0.24", features = ["server", "client", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
anyhow = "1.0"
tokio = { version = "1.44", features = ["full"] }
tokio-util = "0.7"
clap = { version = "4.3", features = ["derive", "env"] }
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = "0.6"
tikv-jemalloc-sys = { version = "0.6", features = [
    "stats",
    "profiling",
    "unprefixed_malloc_on_supported_platforms",
] }
jemalloc_pprof = "0.8"
tower = { version = "0.4.13", features = ["full"] }
moka = { version = "0.12", features = ["sync"] }
once_cell = "1.19.0"
futures = "0.3.30"
hyper = "1.6"
rdkafka = "0.36.2"
aws-config = { version = "1.5.9", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.59.0"
flate2 = "1.0.34"
brotli = "7"
etcd-client = "0.14"
md-5 = "0.10.6"
http = "1.3"
http-body = "1"
procfs = "0.17"
lru = "0.16.0"
libloading = "0.8.8"

# revm
revm = { version = "36.0.0", features = [
    "std",
    "secp256k1",
    "blst",
    "serde",
    "optional_eip3607",
    "optional_eip7623",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_block_gas_limit",
] }
op-revm = { version = "17.0.0", features = [
    "std",
    "secp256k1",
    "blst",
    "serde",
    "optional_eip3607",
    "optional_no_base_fee",
    "optional_balance_check",
    "optional_block_gas_limit",
] }
revm-inspectors = "0.36.1"
revm-bytecode = "9.0.0"

# alloy
alloy-chains = "0.2.5"
alloy = { version = "1.5.2", features = ["full"] }
alloy-rlp = "0.3"
alloy-rlp-derive = "0.3"
alloy-hardforks = "0.4"
alloy-evm = "0.29.2"
alloy-sol-types = "1.3"
# alloy-contract 的 Rust 代码没直接 use，但 `sol!` 宏展开会生成 alloy_contract::* 的引用。
alloy-contract = "1.1.3"

# op

# metrics
metrics = "0.24.0"
metrics-derive = "0.1"
metrics-exporter-prometheus = { version = "0.16.0", default-features = false }

axum = "0.7.9"

bls_on_arkworks = "0.3.0"
prost = "0.12.6"
parity-bytes = "0.1.2"
secp256k1 = "0.30"
p256 = "0.13"
elliptic-curve = "0.13"
sha2 = "0.10"
bech32 = "0.11"
ed25519-consensus = { version = "2.1", default-features = false }
k256 = { version = "0.13", features = ["schnorr"] }

pprof = { version = "0.11", features = ["flamegraph"] }

libmdbx = { git = "https://github.com/Chaintable/libmdbx-rs.git", tag = "1.0.0" }
page_size = "0.6.0"
dashmap = "6.1"

# bench
comfy-table = "7.1"
rand = "0.10"

[profile.release]
opt-level = 3
debug = true
