[package]
name = "leafage-evm-chains"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
alloy = { workspace = true, features = ["rpc-types-trace", "getrandom"] }
alloy-rlp.workspace = true
alloy-chains.workspace = true
alloy-hardforks.workspace = true
alloy-evm.workspace = true
revm.workspace = true
leafage-evm-types.workspace = true
once_cell.workspace = true
bls_on_arkworks.workspace = true
prost.workspace = true
parity-bytes = { workspace = true, default-features = false }
secp256k1 = { workspace = true, features = ["global-context", "std", "recovery"] }

#only use in bsc precompile
cometbft = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
cometbft-light-client-verifier = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
cometbft-proto = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
cometbft-light-client = { git = "https://github.com/bnb-chain/greenfield-cometbft-rs.git", rev = "1282547" }
tendermint = { git = "https://github.com/bnb-chain/tendermint-rs-parlia", rev = "8c21ccbd58a174e07eed2c9343e63ccd00f0fbd5", features = ["secp256k1"] }
