[package]
name = "leafage-evm-precompile"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
exclude.workspace = true

[dependencies]
alloy = { workspace = true, features = ["rpc-types-trace", "getrandom"] }
revm.workspace = true
p256 = { workspace = true, features = ["ecdsa", "expose-field", "arithmetic"] }
num-bigint.workspace = true
once_cell.workspace = true
