[package]
name = "leafage-evm-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
exclude.workspace = true


[dependencies]
leafage-evm-types.workspace = true
leafage-evm-storage.workspace = true
revm.workspace = true
revm-inspectors.workspace = true
jsonrpsee.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tower.workspace = true
prometheus.workspace = true
once_cell.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true
alloy.workspace = true
alloy-rlp.workspace = true

[features]
default = []
optimism = [
    "leafage-evm-types/optimism",
    "leafage-evm-storage/optimism",
    "revm/optimism",
]
