[package]
name = "leafage-evm-rpc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
exclude.workspace = true


[dependencies]
leafage-evm-types.workspace = true
leafage-evm-storage.workspace = true
leafage-evm-chains.workspace = true
revm.workspace = true
op-revm.workspace = true
revm-inspectors.workspace = true
jsonrpsee.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tower.workspace = true
once_cell.workspace = true
futures.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
alloy.workspace = true
alloy-rlp.workspace = true
alloy-evm.workspace = true
alloy-contract.workspace = true
metrics.workspace = true
metrics-derive.workspace = true
hyper.workspace = true
http-body-util.workspace = true
http-body.workspace = true
http.workspace = true
thiserror.workspace = true
serde.workspace = true
anyhow.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
procfs.workspace = true
