[package]
name = "leafage-evm-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
exclude.workspace = true


[dependencies]
thiserror.workspace = true
leafage-evm-types.workspace = true
revm.workspace = true
open-fastrlp.workspace = true
open-fastrlp-derive.workspace = true
auto_impl.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
ethers-core.workspace = true
serde_json.workspace = true
rocksdb = { workspace = true, optional = true, features = ["jemalloc"] }
quick_cache.workspace = true

[features]
default = []
with-rocksdb = ["rocksdb"]
