[package]
name = "leafage-evm-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
exclude.workspace = true


[dependencies]
thiserror.workspace = true
leafage-evm-types.workspace = true
revm.workspace = true
auto_impl.workspace = true
tracing.workspace = true
async-trait.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
rocksdb = { workspace = true, optional = true, features = ["jemalloc"] }
memmap2.workspace = true
quick_cache.workspace = true
once_cell.workspace = true
alloy-rlp.workspace = true
alloy-rlp-derive.workspace = true
alloy.workspace = true
metrics.workspace = true
metrics-derive.workspace = true

[features]
default = ["with-rocksdb"]
with-rocksdb = ["rocksdb"]
