[package]
name = "leafage-evm-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
exclude.workspace = true


[dependencies]
alloy = { workspace = true, features = ["rpc-types-trace"] }
revm.workspace = true
serde.workspace = true
serde_json.workspace = true
prometheus.workspace = true
alloy-rlp.workspace = true
alloy-rlp-derive.workspace = true
