[package]
name = "leafage-evm-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
exclude.workspace = true


[dependencies]
alloy = { workspace = true, features = ["rpc-types-trace", "getrandom", "serde"] }
revm.workspace = true
op-revm.workspace = true
serde.workspace = true
serde_json.workspace = true
alloy-rlp.workspace = true
alloy-rlp-derive.workspace = true
thiserror.workspace = true
flate2.workspace = true
md-5.workspace = true
revm-inspectors.workspace = true
revm-bytecode.workspace = true
